# jv32.dev

./: .gitignore  .gitmodules  .rules.verible_format  .rules.verible_lint  LICENSE  Makefile  Makefile.cfg  README.md  TODO.md  TOOLS.md  env.config.template  prompt.md
docs/: CONFIGURATION.md  COVERAGE.md  Makefile  jv32_soc_datasheet.adoc  (+2 more)
rtos/zephyr/: CMakeLists.txt  Kconfig  Makefile  module.yml  patch_kconfig.sh
rtos/zephyr/boards/riscv/jv32/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  board.cmake  board.yml  jv32.dts  jv32_defconfig
rtos/zephyr/drivers/: CMakeLists.txt  Kconfig
rtos/zephyr/drivers/console/: CMakeLists.txt  Kconfig.jv32  console_jv32.c
rtos/zephyr/drivers/serial/: CMakeLists.txt  Kconfig.jv32  uart_jv32.c
rtos/zephyr/dts/bindings/: vendor-prefixes.txt
rtos/zephyr/dts/bindings/serial/: jv32,uart.yaml
rtos/zephyr/samples/hello/: CMakeLists.txt  README.md  prj.conf
rtos/zephyr/samples/hello/src/: main.c
rtos/zephyr/samples/perf/: CMakeLists.txt  prj.conf
rtos/zephyr/samples/perf/src/: main.c
rtos/zephyr/samples/simple/: CMakeLists.txt
rtos/zephyr/samples/simple/src/: main.c
rtos/zephyr/samples/stress/: CMakeLists.txt  prj.conf  testcase.yaml
rtos/zephyr/samples/stress/src/: stress.c
rtos/zephyr/samples/threads_sync/: prj.conf
rtos/zephyr/samples/threads_sync/src/: main.c
rtos/zephyr/samples/uart_echo/: README.md  prj.conf
rtos/zephyr/samples/uart_echo/src/: main.c
rtos/zephyr/soc/riscv/jv32/: CMakeLists.txt  Kconfig.defconfig  Kconfig.soc  linker-defs-sub.h  linker.ld  reset.S  soc.c  soc.h  soc.yml
(+278 files in other folders)
